--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.34.3",
     "mongodb": "^7.1.0",
     "motion": "^12.34.0",
     "next": "16.1.6",
